<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b292b"
    tools:context="com.get.gsappalpha1.TimerSettingsActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">



    <TextView
        android:id="@+id/TitleTimerSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="12dp"
        android:text="Shot Timer Settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TitleSessionNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/number_of_sessions"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTimerSettings" />

    <SeekBar
        android:id="@+id/SessionNumSlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="8"
        android:progress="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleSessionNum"
        tools:ignore="RtlHardcoded"
        tools:layout_marginLeft="18dp" />

    <TextView
        android:id="@+id/TitleShotNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="22dp"
        android:text="@string/number_of_shots"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SessionNumSlider" />

    <SeekBar
        android:id="@+id/SessionShotSlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleShotNum"
        tools:ignore="RtlHardcoded"
        tools:layout_marginLeft="18dp" />

    <TextView
        android:id="@+id/TitleSessionDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="22dp"
        android:text="@string/delay_between_sessions"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SessionShotSlider" />

    <SeekBar
        android:id="@+id/SessionDelaySlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleSessionDelay"
        tools:ignore="RtlHardcoded"
        tools:layout_marginLeft="18dp" />


    <TextView
        android:id="@+id/TitleSessionLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="22dp"
        android:layout_marginStart="25dp"
        android:text="@string/session_time_limit"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SessionDelaySlider" />

    <SeekBar
        android:id="@+id/SessionLengthSlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="30"
        android:progress="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleSessionLength"
        tools:ignore="RtlHardcoded"
        tools:layout_marginLeft="18dp" />
    <TextView
        android:id="@+id/TitleCountDownLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="22dp"
        android:text="@string/makeready_length"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SessionLengthSlider" />

    <SeekBar
        android:id="@+id/CountdownLengthSlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleCountDownLength"
        tools:ignore="RtlHardcoded"
        tools:layout_marginLeft="18dp" />

        <Button
            android:id="@+id/buttonTimerSettingsOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/roundcorner"
            android:onClick="OKPress"
            android:text="@string/ok"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:width="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonTimerSettingsCancel" />

        <Button
            android:id="@+id/buttonTimerSettingsCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/roundcornerred"
            android:onClick="CANCELPress"
            android:text="@string/cancel"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:width="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonTimerSettingsOK"
            app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/trainButton"
        android:layout_width="30dp"
        android:layout_height="48dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/train"
        android:onClick="TrainPress"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <Button
        android:id="@+id/HomeButton"
        android:layout_width="30dp"
        android:layout_height="48dp"
        android:layout_marginStart="75dp"
        android:background="@drawable/homeon"
        android:onClick="HomePress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/skv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Textview"
        app:layout_constraintTop_toBottomOf="@+id/TitleSessionNum"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/SessionNumSlider"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/skv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Textview"
        app:layout_constraintTop_toBottomOf="@+id/TitleShotNum"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/SessionShotSlider"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        tools:layout_editor_absoluteY="125dp" />

    <TextView
        android:id="@+id/skv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Textview"
        app:layout_constraintTop_toBottomOf="@+id/TitleSessionDelay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/SessionDelaySlider"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/skv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Textview"
        app:layout_constraintTop_toBottomOf="@+id/TitleCountDownLength"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/CountdownLengthSlider"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        tools:layout_editor_absoluteY="349dp" />

    <TextView
        android:id="@+id/skv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Textview"
        app:layout_constraintTop_toBottomOf="@+id/TitleSessionLength"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/SessionLengthSlider"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        tools:layout_editor_absoluteY="424dp" />

    <TextView
        android:id="@+id/MakeReady_SwitchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="Reloading Over Sound"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CountdownLengthSlider" />

    <Switch
        android:id="@+id/MakeReadySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:checked="true"
        android:textOn="@string/on"
        android:textOff="@string/Mute"

        android:textColor="@android:color/background_light"

        app:layout_constraintStart_toEndOf="@+id/MakeReady_SwitchTitle"
        app:layout_constraintTop_toBottomOf="@+id/CountdownLengthSlider" />

    <TextView
        android:id="@+id/MakeReady_Switch_On"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:text="@string/on"
        android:textColor="@android:color/background_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintStart_toEndOf="@+id/MakeReadySwitch"
        app:layout_constraintTop_toBottomOf="@+id/CountdownLengthSlider" />

    <TextView
        android:id="@+id/RandomModeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="22dp"
        android:text=" Use  Random  Mode"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MakeReady_Switch_On" />

    <Switch
        android:id="@+id/RandomModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="22dp"
        android:checked="false"
        android:textOn="@string/on"
        android:textOff="@string/off"

        android:textColor="@android:color/background_light"

        app:layout_constraintStart_toEndOf="@+id/RandomModeTitle"
        app:layout_constraintTop_toBottomOf="@+id/MakeReady_Switch_On" />

    <TextView
        android:id="@+id/RandomMode_Switch_On"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        android:text="@string/off"
        android:textColor="@android:color/background_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintStart_toEndOf="@+id/RandomModeSwitch"
        app:layout_constraintTop_toBottomOf="@+id/MakeReady_Switch_On" />

    <TextView
        android:id="@+id/RandomModeScribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:text="@string/FixedTimerDescriptions"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RandomModeSwitch" />

</android.support.constraint.ConstraintLayout>