<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".TestActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:id="@+id/layouthold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:paddingBottom="0dp"
        android:paddingEnd="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#393639"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/imageView3"
                android:contentDescription="@string/nodesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/toplogo" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

        </FrameLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#393639"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="64dp">

            <Button
                android:id="@+id/trainButton"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/trainon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/home"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/nodesc"
        android:layout_marginTop="64dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="359dp" />

    <Button
        android:id="@+id/settingsbutton"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_marginBottom="159dp"
        android:layout_marginLeft="57dp"
        android:layout_marginRight="57dp"
        android:background="@drawable/roundcorner"
        android:text="@string/settings"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonZPlus"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginBottom="89dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/roundcorner"
        android:text="@string/Zplus"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button" />

    <Button
        android:id="@+id/buttonZMinus"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginBottom="89dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/roundcorner"
        android:text="@string/Zminus"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="57dp"
        android:layout_marginStart="57dp"
        android:background="@drawable/roundcorner"
        android:text="@string/button"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/StatusBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#2b292b"
        android:gravity="center"
        android:text="@string/Textview"
        android:paddingBottom="2pt"
        android:drawablePadding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="265dp" />

    <TextView
        android:id="@+id/SplitTimeRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#07000000"
        android:drawablePadding="5dp"
        android:gravity="start"
        android:paddingStart="12pt"
        android:paddingBottom="2pt"
        android:text="@string/Textview"
        android:textColor="#FF4040"
        android:textSize="18sp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatusBar" />

</android.support.constraint.ConstraintLayout>
